<resources>
    <string name="app_name">Task Manager</string>
    
    <!-- Notification Channels -->
    <string name="notification_channel_general">General Notifications</string>
    <string name="notification_channel_general_description">General app notifications</string>
    <string name="notification_channel_tasks">Task Notifications</string>
    <string name="notification_channel_tasks_description">Notifications about your tasks</string>
    <string name="notification_channel_reminders">Reminders</string>
    <string name="notification_channel_reminders_description">Task reminders and deadlines</string>
    <string name="login_title">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="submit_login_btn">Sign In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register_link">Create account</string>
    <string name="register_title">Register</string>
    <string name="passwordConfirm">Confirm password</string>
    <string name="submit_register_btn">Create account</string>
    <string name="login_link">Sign In</string>
    <string name="submit_forgot_password_btn">Recovery password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="time">Hour</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="username">User</string>
    <string name="name">Name</string>
    <string name="task">Task</string>
    <string name="password_empty">Password cleaned</string>
    <string name="password_very_weak">Password very weak</string>
    <string name="password_weak">Password weak</string>
    <string name="password_normal">Normal password</string>
    <string name="password_strong">Password strong</string>
    <string name="password_very_strong">Password very strong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading_informations">Loading informations...</string>
    <string name="error_loading_tasks">Error to load tasks.</string>
    <string name="loading_tasks">Loading tasks...</string>
    <string name="no_tasks">No tasks found</string>
    <string name="title_delete_task">Delete task?</string>
    <string name="message_delete_task">Are you sure you want to delete this task?</string>
    <string name="confirm">Confirm</string>
    <string name="task_deleted">Task deleted</string>
    <string name="cancel">Cancel</string>
    <string name="error_loading_task">Error to load task</string>
    <string name="task_edited">Task edited!</string>
    <string name="error_task_edited">Error to edit task.</string>
    <string name="task_saved">Task saved!</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_refused">Permission refused</string>
    <string name="error_to_capture_image">Error to capture image</string>
    <string name="phone">Phone</string>
    <string name="profile_updated">Profile Updated!</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="language_settings">Language Settings</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="english">English</string>
    <string name="portuguese">Português</string>
    <string name="spanish">Español</string>
    <string name="toggle_theme">Toggle Dark/Light Mode</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
</resources>
