<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/email_fragment"
            android:name="dev.brodt.taskmanager.fragments.EmailInputFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/registerTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />
        <fragment
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:name="dev.brodt.taskmanager.fragments.PasswordDifficult"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/passwordConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_marginTop="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInput"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:text="@string/forgot_password"/>

        <Button
            android:id="@+id/submitRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit_register_btn"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/login"
            android:layout_marginTop="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/submitRegisterBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:text="@string/login_link"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
