<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarLayout"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_back_24"
                android:layout_gravity="left"
                android:layout_marginEnd="16dp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/body_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="32sp"
        android:layout_marginTop="32sp"
        android:paddingHorizontal="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:hint="@string/title"
            android:paddingVertical="16dp"
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/description"
            android:paddingTop="24dp"
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32sp"
        app:layout_constraintEnd_toEndOf="@+id/body_title"
        app:layout_constraintStart_toStartOf="@+id/body_title"
        app:layout_constraintTop_toBottomOf="@+id/body_title"
        >
        <EditText
            android:hint="@string/date"
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
        <ImageView
            android:id="@+id/date_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/calendar_month_48"
            android:layout_gravity="right"
            android:layout_marginTop="-38dp"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32sp"
        app:layout_constraintEnd_toEndOf="@+id/date_picker"
        app:layout_constraintStart_toStartOf="@+id/date_picker"
        app:layout_constraintTop_toBottomOf="@+id/date_picker"
        >
        <EditText
            android:hint="@string/time"
            android:id="@+id/time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
        <ImageView
            android:id="@+id/time_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/schedule_48"
            android:layout_gravity="right"
            android:layout_marginTop="-38dp"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32sp"
        app:layout_constraintEnd_toEndOf="@+id/time_picker"
        app:layout_constraintStart_toStartOf="@+id/time_picker"
        app:layout_constraintTop_toBottomOf="@+id/time_picker"
        >
        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>